fix: update contact mail and update top cover image

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -24,10 +24,8 @@
     },
     "Contact": {
       "title": "Contact Us",
-      "subTitle": "For game projects and other cooperation, please contact <maillink>business@firstplay.io</maillink>"
+      "subTitle": "For game projects and other cooperation, please contact <maillink>business@firstplay.app</maillink>"
     }
   },
-  "PassNFT": {
-    
-  }
+  "PassNFT": {}
 }
