--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -24,7 +24,7 @@
     },
     "Contact": {
       "title": "联系我们",
-      "subTitle": "游戏项目入驻及其他合作请联系 <maillink>business@firstplay.io</maillink> 获取支持"
+      "subTitle": "游戏项目入驻及其他合作请联系 <maillink>business@firstplay.app</maillink> 获取支持"
     }
   },
   "PassNFT": {}
