feat: update UI

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -3,7 +3,7 @@
     "Header": {
       "games": "Games",
       "strategy": "Walkthrough",
-      "passNFT": "Pass NFT",
+      "passNFT": "Carnival",
       "connectWallet": "Connect Wallet"
     },
     "Footer": {
@@ -12,7 +12,7 @@
       "platform": "Platform",
       "games": "Games",
       "strategy": "Walkthrough",
-      "passNFT": "Pass NFT",
+      "passNFT": "Carnival",
       "support": "Support",
       "whitepaper": "Whitepaper",
       "litebook": "Litebook",
