--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -3,7 +3,7 @@
     "Header": {
       "games": "游戏",
       "strategy": "攻略",
-      "passNFT": "Pass NFT",
+      "passNFT": "Carnival",
       "connectWallet": "连接钱包"
     },
     "Footer": {
@@ -12,7 +12,7 @@
       "platform": "平台",
       "games": "游戏",
       "strategy": "攻略",
-      "passNFT": "Pass NFT",
+      "passNFT": "Carnival",
       "support": "支持",
       "whitepaper": "白皮书",
       "litebook": "简版白皮书",
