--- a/i18n/vi-VM.json
+++ b/i18n/vi-VM.json
@@ -44,7 +44,8 @@
       "trialingTitle": "Trialing Games",
       "emptyTrialingTip": "No games currently trialing, start a game you like now!",
       "moreLink": "More",
-      "rewardedSectionTitle": "Rewarded Games",
+      "rewardedSectionTitle": "Bounty",
+      "rewardedSectionSubTitle": "Complete Tasks and Win Rewards",
       "hotgameSectionTitle": "Hot Games",
       "strategySectionTitle": "Game Tutorials",
       "supportSectionTitle": "Supported by",
