--- a/i18n/template.json
+++ b/i18n/template.json
@@ -41,7 +41,7 @@
       "btnText": "Go and see"
     },
     "Section": {
-      "trialingTitle": "Trialing Games",
+      "trialingTitle": "Ongoing Tasks",
       "emptyTrialingTip": "No games currently trialing, start a game you like now!",
       "moreLink": "More",
       "rewardedSectionTitle": "Bounty",
