--- a/i18n/id-ID.json
+++ b/i18n/id-ID.json
@@ -58,6 +58,20 @@
     "comingSoonTip": "Segera hadir",
     "showMoreBtn": "Lebih",
     "showLessBtn": "Kurang",
+    "homeTab": "Home",
+    "newsTab": "Videos&News",
+    "proplayTab": "Pro Players",
+    "Tabs": {
+      "activity": "Activity",
+      "walkthrough": "Walkthrough",
+      "video": "Videos",
+      "news": "News",
+      "proPlayer": "Pro Players",
+      "comingSoonTip": "Coming Soon!",
+      "emptyTip": "No player yet, stay tuned",
+      "lessArticle": "See less",
+      "moreArticle": "See all"
+    },
     "GameTask": {
       "minutes": "Menit",
       "hours": "Jam",
@@ -71,7 +85,8 @@
       "taskStepBtnText": "Langkah Misi",
       "seeMoreTaskStep": "Lihat semua",
       "seeLessTaskStep": "Lihat Lebih Sedikit",
-      "stepText": "Langkah"
+      "stepText": "Langkah",
+      "reward": "Rewards"
     },
     "VerifyTaskModal": {
       "modalTitle": "Verifikasi Tugas",
@@ -83,6 +98,17 @@
       "nextBtnText": "Berikutnya",
       "backBtnText": "Kembali"
     }
+  },
+  "Article": {
+    "shareText": "Share",
+    "authorOtherArticles": "Author's other articles:",
+    "viewAllArticleFor": "View all for #{gameName}",
+    "articleStep": "Step{index}",
+    "stepBack": "Back",
+    "stepNext": "Next",
+    "viewNextArticle": "View next walkthrough",
+    "articlePrev": "Previous",
+    "articleNext": "Next"
   },
   "Profile": {
     "unipassLinkDesc": "Kunjungi dompet UniPass ke aset Anda setelah withdraw.Login email",
@@ -124,5 +150,18 @@
       "withdrawTip": "Pengajuan penarikan akan diproses sebelum jam 12 siang setiap hari Selasa dan Jumat (UTC +8) Anda dapat memeriksa saldo di dompet nanti.",
       "btnText": "Konfirm dan withdraw"
     }
+  },
+  "ErrorMessage": {
+    "4001": "Parameter missing！",
+    "5000": "Internal error！",
+    "5001": "Limit Exceeded！",
+    "5002": "Insufficient game key！",
+    "5003": "Invalid address！",
+    "5004": "The task has started!",
+    "5005": "Invalid request！",
+    "5006": "Unable to withdraw, try again later！",
+    "5007": "Unable to submit at this time, try again later！",
+    "5008": "The task is offline!",
+    "5009": "Do not submit the same information repeatedly!"
   }
 }
