--- a/i18n/id-ID.json
+++ b/i18n/id-ID.json
@@ -86,7 +86,7 @@
       "seeMoreTaskStep": "Lihat semua",
       "seeLessTaskStep": "Lihat Lebih Sedikit",
       "stepText": "Langkah",
-      "reward": "Rewards"
+      "reward": "Progress"
     },
     "VerifyTaskModal": {
       "modalTitle": "Verifikasi Tugas",
