--- a/i18n/vi-VN.json
+++ b/i18n/vi-VN.json
@@ -86,7 +86,7 @@
       "seeMoreTaskStep": "Xem Tất Cả",
       "seeLessTaskStep": "Rút Gọn",
       "stepText": "Bước",
-      "reward": "Rewards"
+      "reward": "Progress"
     },
     "VerifyTaskModal": {
       "modalTitle": "Xác Minh Nhiệm Vụ",
