--- a/i18n/template.json
+++ b/i18n/template.json
@@ -86,7 +86,7 @@
       "seeMoreTaskStep": "See All",
       "seeLessTaskStep": "See Less",
       "stepText": "Step",
-      "reward": "Rewards"
+      "reward": "Progress"
     },
     "VerifyTaskModal": {
       "modalTitle": "Verify Task",
