fix: show error message when start task error

--- a/i18n/id-ID.json
+++ b/i18n/id-ID.json
@@ -86,7 +86,7 @@
       "seeMoreTaskStep": "Lihat semua",
       "seeLessTaskStep": "Lihat Lebih Sedikit",
       "stepText": "Langkah",
-      "reward": "Kemajuan"
+      "reward": "Posisi"
     },
     "VerifyTaskModal": {
       "modalTitle": "Verifikasi Tugas",
