feat: add step title in mobile drawer

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -96,7 +96,8 @@
     "StepDrawer": {
       "verifyBtnText": "Verify",
       "nextBtnText": "Next",
-      "backBtnText": "Back"
+      "backBtnText": "Back",
+      "stepText": "Step"
     }
   },
   "Article": {
