--- a/i18n/id-ID.json
+++ b/i18n/id-ID.json
@@ -96,7 +96,8 @@
     "StepDrawer": {
       "verifyBtnText": "Verifikasi",
       "nextBtnText": "Berikutnya",
-      "backBtnText": "Kembali"
+      "backBtnText": "Kembali",
+      "stepText": "Langkah"
     }
   },
   "Article": {
