feat: support photo upload in verify form

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -43,7 +43,7 @@
     "Section": {
       "trialingTitle": "Ongoing Tasks",
       "emptyTrialingTip": "No games currently trialing, start a game you like now!",
-      "moreLink": "ALL",
+      "moreLink": "View all",
       "rewardedSectionTitle": "Bounties",
       "rewardedSectionSubTitle": "Complete Tasks and Win Rewards",
       "hotgameSectionTitle": "Hot Games",
